# sniper_oss_finder

./: .gitignore  LICENSE  README.md  pyproject.toml
sniper_oss_finder/: __main__.py  reporter.py
src/: __main__.py  analyzer.py  fetcher.py  persister.py  reporter.py
